--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -312,3 +312,25 @@
   biburl    = {https://dblp.org/rec/journals/corr/abs-1807-08186.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{subpixel,
+  author    = {Wenzhe Shi and
+               Jose Caballero and
+               Ferenc Husz{\'{a}}r and
+               Johannes Totz and
+               Andrew P. Aitken and
+               Rob Bishop and
+               Daniel Rueckert and
+               Zehan Wang},
+  title     = {Real-Time Single Image and Video Super-Resolution Using an Efficient
+               Sub-Pixel Convolutional Neural Network},
+  journal   = {CoRR},
+  volume    = {abs/1609.05158},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1609.05158},
+  archivePrefix = {arXiv},
+  eprint    = {1609.05158},
+  timestamp = {Mon, 13 Aug 2018 16:47:09 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/ShiCHTABRW16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
