--- a/report/report/subsections/background/lapsrn.tex
+++ b/report/report/subsections/background/lapsrn.tex
@@ -66,7 +66,7 @@ $$
 Here will be presented only the results of \textbf{MS-LapSRN}\cite{MSLapSRN} since it's an evolution of LapSRN.
 
 \paragraph{Ablation studies on pyramid structure, global residual learning and loss}
-\begin{figure}[h]
+\begin{figure}
     \begin{subfigure}{0.49\textwidth}
         \centering
         \includegraphics[width=\textwidth, keepaspectratio]{lapsr-convergence-analysis.png}
