--- a/report/report/report.tex
+++ b/report/report/report.tex
@@ -16,6 +16,8 @@
 % For importing \maketitle with university parameters
 \usepackage{preamble/universitytitlepage}
 
+\newcommand{\Cite}[1]{\citename{#1}{author}}
+
 \author{Alessandro Dicosola}
 \setstudentid{935563}
 
