--- a/report/report/report.tex
+++ b/report/report/report.tex
@@ -7,8 +7,7 @@
 
 \usepackage{parskip}
 
-\usepackage{subcaption}
-\usepackage{graphicx}
+\usepackage{graphicx, subcaption, float}
 \graphicspath{{../images/}}
 
 \usepackage{cleveref}
@@ -37,7 +36,10 @@
 \import{subsections}{introduction}
 % Background: survey networks used in ASDN
 \import{subsections}{background}
+
 % TODO: ASDN
+
+% TODO: Extra: identity skip connection, subconvolution
 
 % Bibliography
 \clearpage
