--- a/report/report/subsections/background/metasr.tex
+++ b/report/report/subsections/background/metasr.tex
@@ -102,4 +102,4 @@ The baseline are:
     \caption{The visual comparison with four baselines. Our MetaRDN has better performance.}
 \end{figure}
 
-Overall Meta-SR performs better than RDN on decimal scales.
+Overall Meta-SR performs better than RDN.
