--- a/report/report/subsections/background/rcan.tex
+++ b/report/report/subsections/background/rcan.tex
@@ -74,7 +74,7 @@ Using RCAN for upscaling an 56x56 image to 256x256 achieves the lowest top-1 and
     \caption{RCAN used at the beginning of a pipeline (upsamples an image to 224x244) for object recognition}
 \end{figure}
 
-\subparagraph{Performance versus Parameters}
+\paragraph{Performance versus Parameters}
 RCAN achieve the best performance with not so many parameters.
 \begin{figure}[H]
     \centering
