--- a/report/report/subsections/background/metasr.tex
+++ b/report/report/subsections/background/metasr.tex
@@ -65,12 +65,6 @@ The \textbf{Meta Upscale Module} contains three different modules:
 
 \subsubsection{Results}
 
-\begin{figure}
-    \centering
-    \includegraphics[width=\textwidth, keepaspectratio]{metasr-results1.png}
-    \caption{Results on Meta-SR}\label{metasr:results}
-\end{figure}
-
 \paragraph{Results with decimal scales}
 From the results [\Cref{metasr:results}] Meta-SR, and in particular the \textbf{Meta upscaling module}, performs better since Meta-RDN performs better than Meta-Bi (both are learning the weights for upscaling) which perform better than BiConv (where weights are the same for each scale).
 
@@ -82,24 +76,26 @@ The baseline are:
     \item BiConv: interpolation of the final feature maps and same convolution for all scales.
     \item Meta-Bi: interpolation of the final feature maps but use different weights for each scale using the Weight Prediction Network. 
 \end{itemize}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, keepaspectratio]{metasr-results1.png}
+    \caption{Results on Meta-SR}\label{metasr:results}
+\end{figure}
 
 \paragraph{Comparison between RDN and Meta-RDN}
-\begin{figure}
+Overall Meta-SR performs better than RDN.
+\begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth, keepaspectratio]{metasr-qualitative.png}
     \caption{Meta-SR applied for different scales to a single image.}
 \end{figure}
-
-\begin{figure}
+\begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth, keepaspectratio]{metasr-results-comparison.png}
     \caption{Meta-SR versus RDN.}
 \end{figure}
-
-\begin{figure}
+\begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth, keepaspectratio]{metasr-qualitative-comparison.png}
     \caption{The visual comparison with four baselines. Our MetaRDN has better performance.}
 \end{figure}
-
-Overall Meta-SR performs better than RDN.
