--- a/report/report/report.tex
+++ b/report/report/report.tex
@@ -36,10 +36,9 @@
 \import{subsections}{introduction}
 % Background: survey networks used in ASDN
 \import{subsections}{background}
-
-% TODO: ASDN
-
-% TODO: Extra: identity skip connection, subconvolution
+% Main paper: ASDN
+\import{subsections}{asdn}
+% TODO: project work section
 
 % Bibliography
 \clearpage
