--- a/report/report/subsections/background.tex
+++ b/report/report/subsections/background.tex
@@ -16,3 +16,5 @@ Here will be explored the most important networks referenced by ASDN \cite{ASDN}
 % %MetaSR
 \clearpage
 \import{background}{metasr}
+
+% TODO: Extra: identity skip connection, laplacian pyramid, subconvolution
