--- a/report/report/subsections/background/csfm.tex
+++ b/report/report/subsections/background/csfm.tex
@@ -1,4 +1,4 @@
-\subsection{Channel-wise and Spatial Feature Modulation Network (CSFM\cite{CSFM})}
+\subsection{Channel-wise and Spatial Feature Modulation Network (CSFM\cite{CSFM})}\label{csfm}
 
 CSFM exploit features reuse with dense connections, ease the training with skip and dense connections as well as avoid the flow of low-level features inside the network and focus on high-frequency information  and on particular spatial position using channel-wise and spatial-wise attention mechanisms.
 
