--- a/report/report/subsections/background/dbdn.tex
+++ b/report/report/subsections/background/dbdn.tex
@@ -1,4 +1,4 @@
-\subsection{Deep Bi-Dense Network (DBDN\cite{DBDN})}
+\subsection{Deep Bi-Dense Network (DBDN\cite{DBDN})}\label{dbdn}
 \begin{figure}
     \centering
     \includegraphics[width=\textwidth, keepaspectratio]{bidense-comparison.png}
