--- a/report/report/subsections/background/rcan.tex
+++ b/report/report/subsections/background/rcan.tex
@@ -1,4 +1,4 @@
-\subsection{Residual Channel Attention Network (RCAN\cite{RCAN})}
+\subsection{Residual Channel Attention Network (RCAN\cite{RCAN})}\label{rcan}
 
 In SR task in order to reconstruct an SR image \textit{high-frequency information} are extremely important, therefore \textbf{attention} mechanism are deployed in order to do so.
 
