--- a/report/report/report.tex
+++ b/report/report/report.tex
@@ -10,6 +10,8 @@
 \usepackage{graphicx, subcaption, float}
 \graphicspath{{../images/}}
 
+\usepackage{amsmath}
+
 \usepackage{cleveref}
 
 % For importing \maketitle with university parameters
@@ -34,10 +36,15 @@
 
 % Introduction
 \import{subsections}{introduction}
+
 % Background: survey networks used in ASDN
+\clearpage
 \import{subsections}{background}
+
 % Main paper: ASDN
+\clearpage
 \import{subsections}{asdn}
+
 % TODO: project work section
 
 % Bibliography
