--- a/report/powerpoint/powerpoint.tex
+++ b/report/powerpoint/powerpoint.tex
@@ -403,7 +403,7 @@
     \only<2>{
         \begin{figure}
             \centering
-            \includegraphics[width=0.9\textwidth]{laplacian-pyramid example.png}
+            \includegraphics[width=0.9\textwidth]{laplacian-pyramid-example.png}
         \end{figure}
     }
     
