--- a/report/report/subsections/background/dbdn.tex
+++ b/report/report/subsections/background/dbdn.tex
@@ -41,7 +41,7 @@ The local residual learning allow the flowing of the gradients allowing a faster
 
 Moreover a global skip connections is used in order to use low-frequency information from the LR image and allow the gradient to flow from the end to the beginning of the network.
 
-The SR image is reconstructed using either deconvolution or sub-pixel convolution\cite{subpixel}
+The SR image is reconstructed using either deconvolution or sub-pixel convolution\cite{subpixelconvolution}
 
 \subsubsection{Results}
 
