Started writing project

--- a/report/report/report.tex
+++ b/report/report/report.tex
@@ -11,8 +11,8 @@
 \graphicspath{{../images/}}
 
 \usepackage{amsmath}
+\usepackage{hyperref, cleveref}
 
-\usepackage{cleveref}
 
 % For importing \maketitle with university parameters
 \usepackage{preamble/universitytitlepage}
@@ -45,7 +45,9 @@
 \clearpage
 \import{subsections}{asdn}
 
-% TODO: project work section
+% project work
+\clearpage
+\import{subsections}{project}
 
 % Bibliography
 \clearpage
