--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -313,7 +313,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{subpixel,
+@article{subpixelconvolution,
   author    = {Wenzhe Shi and
                Jose Caballero and
                Ferenc Husz{\'{a}}r and
@@ -332,5 +332,25 @@
   eprint    = {1609.05158},
   timestamp = {Mon, 13 Aug 2018 16:47:09 +0200},
   biburl    = {https://dblp.org/rec/journals/corr/ShiCHTABRW16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{eli5subpixelconvolution,
+  author    = {Wenzhe Shi and
+               Jose Caballero and
+               Lucas Theis and
+               Ferenc Huszar and
+               Andrew P. Aitken and
+               Christian Ledig and
+               Zehan Wang},
+  title     = {Is the deconvolution layer the same as a convolutional layer?},
+  journal   = {CoRR},
+  volume    = {abs/1609.07009},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1609.07009},
+  archivePrefix = {arXiv},
+  eprint    = {1609.07009},
+  timestamp = {Mon, 13 Aug 2018 16:49:02 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/ShiCTHALW16.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
