--- a/report/report/report.tex
+++ b/report/report/report.tex
@@ -5,6 +5,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
+% Avoid indentation at begin of each section 
 \usepackage{parskip}
 
 \usepackage{graphicx, subcaption, float}
